--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/ramen.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Ethan Tong - Prosecutor</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Ethan Tong</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ethantong.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Ethan Tong
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology Student📚</div>
+        <p class="lead mb-4">Currently a first year at UCR, studying Sociology but looking to switch into Political Science or Philosophy to puruse Law. I am also actively looking for internships/jobs related within the field of Law.<br><br>
 
-        Enter bio here<br><br>
+        I live in the US but moved from Hong Kong for college. I lived in Hong Kong for about 11 years before moving back to the US, where I was born. My ideal job is to become a Prosecutor in the future, though I am not certain on this.<br><br>
 
-        Enter bio here
+        I am currently interested in internships/jobs that may help me to gain experience for my future in the field.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Debate and Law Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">High School Club</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Been in debate club during high school for about 3 years<br> 
+              • Went to different places like the supreme and high court in Hong Kong<br>
+              • Experienced real life court sessions while in Hong Kong <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2016-May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">MUN</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">High School Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Was a part of MUN for 2 years, going on MUN trips and going on debates around Hong Kong <br>
+              • Learning and improving on deabte and issues that surrounded society<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">October 2017 - March 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Office Job/Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Company</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped in an law firm office in Hong Kong for a brief moment during the summer<br>
+            • Helped out in filing and managing paperwork<br>
+            • Looking and observing to see how important cases are prepared<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2019 - September 2019</span>
           </div>
         </div>
 
@@ -152,37 +151,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Currently studying for a undegraduate degree in Sociology, pursuing for a change to Political Science</div>
+            <div>BA in Political Science </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2019 - TBD </span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +167,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/mun1.jpg" width="500px" height="315px">
+            <img src="img/mun2.jpeg" width="500px" height="315px">
+            <br/>
+            <img src="img/mun3.jpg" width="500px" height="315px">
+            <img src="img/mun4.jpg" width="500px" height="315px">
+            <br/>
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Ethan Tong</center><br>
 
 
   </div>
